--- a/src/styles/recipemore.css
+++ b/src/styles/recipemore.css
@@ -34,6 +34,7 @@
     cursor: pointer;
 }
 .title {
+    color: blue;
     font-size: 16px;
     font-family: "KingSejongInstitute", sans-serif;
     text-align: center;
@@ -100,4 +101,5 @@
     width: 266px;
     height: 100px;
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    
 }
