docs : login 콘솔 수정

--- a/src/styles/write/addimages.css
+++ b/src/styles/write/addimages.css
@@ -1,3 +1,7 @@
+.ant-upload-list-item a {
+  display: none;
+}
+
 .ant-modal .ant-modal-content {
   position: absolute !important;
   transform: translate(80%, -20%) !important;
